k8s/svc-with-multi-deploy/deploy-v1.yaml
apiVersion: apps/v1beta1 
kind: Deployment
metadata:
  name: demoweb1
  labels:
    app: demoweb
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoweb 
      version: v1
  template:
    metadata:
      labels:
        app: demoweb
        version: v1
    spec:
      containers:
      - name: demoweb
        image: peihsinsu/demoweb
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 200m
        ports:
        - containerPort: 80
