k8s/svc-with-multi-deploy/deploy-v2.yaml
apiVersion: apps/v1beta1 
kind: Deployment
metadata:
  name: demoweb2
  labels:
    app: demoweb
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoweb 
      version: v2
  template:
    metadata:
      labels:
        app: demoweb
        version: v2
    spec:
      containers:
      - name: demoweb
        image: peihsinsu/demoweb
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 200m
        ports:
        - containerPort: 80
