k8s/svc-with-multi-deploy/svc-v2.yaml
kind: Service
apiVersion: v1
metadata:
  name: demoweb-v2
spec:
  selector:
    app: demoweb
    version: v2
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
  type: LoadBalancer
