k8s/svc-with-multi-deploy/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: demoweb
spec:
  selector:
    app: demoweb
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
  type: LoadBalancer
